--- a/index.html
+++ b/index.html
@@ -19,23 +19,30 @@
 
             <nav>
                 <div>
-                    <i class="fa-brands fa-whatsapp fa-3x whatsapp"></i>
+                    <i class="fa-brands fa-whatsapp fa-3x whatsapp" id="group"></i>
                 </div>
                 <div>
                     <div>
     
                     </div>
-                    <div>
-                        <span>You can call us to book your hotel <br> +234 700 880 8000</span>
+                    <div class="customer-care">
+                        <img src="./assets/customer.jpg" alt="">
+
+                        <div class="customer-details">
+                            <p>You can call us to book your hotel</p>
+                            <p>+234 700 880 8000</p>
+                        </div>
                     </div>
                 </div>
-                <div>
+
+                <div class="currency">
                     <img class="flag" src="./assets/flag.png" alt="">
-                    <span>N</span>
+                    <p>N</p>
                 </div>
-                <div>
+
+                <div class="profile">
                     <div>
-                        <i class="fa-solid fa-user fa-3x"></i>
+                        <i class="fa-solid fa-user fa-2x"></i>
                     </div>
                     <p>Account</p>
                     <i></i>
