add body content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Libre+Baskerville&family=Montserrat&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/8d20eebc7a.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -50,7 +54,55 @@
             </nav>
         </header>
 
+        <section class="hero">
+            <div>
+                <p>Find and book hotels in Nigeria.</p>
+                <p>Search through 13,171 hotels in Nigeria</p>
+            </div>
+            <div class="hotel-finder">
+                <form action="get">
+                    <input type="text" placeholder="Search for a city or particular hotel">
+                    <input type="text" placeholder="Thu, 06 Apr - Fri, 07 Apr">
+                    <button>Find Hotels</button>
+                </form>
+            </div>
+        </section>
 
+        <section class="destination">
+            <p>Suggested Destinations in Nigeria</p>
+            <p>Below are the most popular travel destinations in Nigeria</p>
+        </section>
+        <hr>
+
+        <section class="hotels">
+            <div>
+                <p>Hotels in <br> Lagos</p>
+                <p>3,423 hotels</p>
+            </div>
+
+            <div>
+                <p>Hotels in <br> Lagos</p>
+                <p>3,423 hotels</p>
+            </div>
+            <div>
+                <p>Hotels in <br> Lagos</p>
+                <p>3,423 hotels</p>
+            </div>
+            <div>
+                <p>Hotels in <br> Lagos</p>
+                <p>3,423 hotels</p>
+            </div>
+            <div>
+                <p>Hotels in <br> Lagos</p>
+                <p>3,423 hotels</p>
+            </div>
+        </section>
+
+        <section class="destination">
+            <p>Today's Top Hotel Deals</p>
+            <p>A selection of the best hotel deals, only available today</p>
+        </section>
+        <hr>
 
     </div>
 </body>
